    in postgresql.conf. Closes: #314537
  * Added tests/041_server_default_socketdir: Check that the socket is created
    in /var/run/postgresql if unix_socket_directory is not specified.
  * pg_ctlcluster:
    - On startup, check for a stale or invalid PID file and remove it if
      appropriate.
    - On stop, bail out on an invalid PID file. Closes: #304466.

 -- Martin Pitt <mpitt@debian.org>  Sat, 18 Jun 2005 19:58:38 +0200

postgresql-common (17) unstable; urgency=low

  * PgCommon.pm, cluster_port_running(): Attempt to connect() to the server
    socket for probing if the server is running. The previous method of using
    'psql -l' asked for a password if md5/password authentication is used
    locally. Closes: #314292
  * testsuite: Ignore whitespace changes in expected vs. actual output.
  * tests/100_encodings: Fix race condition when showing postmaster processes:
    If we catch the postmaster right at fork() time, ps shows two postmaster
    instances instead of one. Filter them away to get the expected output.

 -- Martin Pitt <mpitt@debian.org>  Thu, 16 Jun 2005 11:44:08 +0200

postgresql-common (16) unstable; urgency=low

  * pg_createcluster: Add --logfile parameter.
  * pg_wrapper(1): Clarify synopsis.
  * debian/rules: Deuglify manpages by building them with --quotes=none.
  * debian/maintscripts-functions: Do not create a default "main" cluster when
    upgrading a server package.
  * pg_upgradecluster: Handle more configuration parameter transitions:
    - syslog -> log_destination
    - log_statement: false/true -> none/all
    - log_{pid,timestamp,hostname,source_port} -> log_line_prefix
    - obsolete max_expr_depth
  * pg_upgradecluster: Use new replace_conf_value() function which
    produces nicer configuration files with transitioned parameters.
  * Add test 120_obsolete_confparams: Upgrade a 7.4 cluster with all
    possible 7.4 options enabled.
  * PgCommon.pm: Fix parsing of autovacuum parameters.