@@ -1,0 +1,25 @@
+Corrupt pid file while server is running...
+Error: pid file is invalid, please manually kill the stale server process.
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 online postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Restoring pid file and reattempt stop...
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 down   postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Stopping stopped server...
+Error: cluster is not running
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 down   postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Simulating crashed server...
+Removed stale pid file.
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 online postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 down   postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Corrupt pid file while server is down...
+Removed stale pid file.
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 online postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Starting already running server...
+Cluster is already running.
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 online postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
